<resources>
    <string name="app_name">Luca Brisa</string>

    <string name="footer">\© Luca Brasi 2021|All rights reserved</string>
    <string name="login">Anmeldung</string>
    <string name="email">Email</string>
    <string name="password">Passwort</string>
    <string name="home">Zuhause</string>
    <string name="gohome">Zur Startseite</string>
    <string name="arbieit">Arbeit</string>
    <string name="tanken">Tanken</string>
    <string name="profile">Profile</string>
    <string name="logout">Ausloggen</string>
    <string name="start">Anfang</string>
    <string name="refuleready">Betankung bereit</string>
    <string name="end">End</string>
    <string name="choose">Choose</string>


    <string name="promelden">Problem melden 1/1</string>
    <string name="promeldenheader">Problem Melden </string>
    <string name="tanken1">Tanken 1/1</string>
    <string name="arbiet1">Arbeit 1/4</string>
    <string name="arbiet2">Arbeit 2/4</string>
    <string name="arbiet3">Arbeit 3/4</string>
    <string name="arbiet4">Arbeit 4/4</string>

    <string name="kilostand">Kilometerstand:</string>
    <string name="zapfule">Zapfsäule:</string>
    <string name="disleliter">Diesel liters:</string>
    <string name="euro">Euro:</string>

    <string name="zapfulehint">Zapfsäule</string>
    <string name="disleliterhint">Diesel Liter</string>
    <string name="eurohint">Euro</string>

    <string name="station">Station:</string>
    <string name="startkilo">Start Kilometer</string>
    <string name="kenizichen">Kennzeichen:</string>
    <string name="kenizichenhint">Kennzeichen</string>
    <string name="trankstand">Tankstand:</string>
    <string name="kilometer">Kilometer</string>
    <string name="fertig">Fertig</string>
    <string name="unfallpassiert">Unfall Passiert ?</string>
    <string name="addblue">Add Blue getankt:</string>
    <string name="oilfule">Öl getankt ?</string>
    <string name="endkilo">End Kilometer</string>
    <string name="writepro">Schreiben Problem:</string>
    <string name="hintwritepro">Schreiben Problem</string>
    <string name="writeprohint">Schreiben Problem</string>
    <string name="submit">Abschicken</string>
    <string name="please_wait">Warten Sie mal</string>
    <string name="No_Internet">Keine Internetverbindung</string>
    <string name="somethingwrong">Etwas ist schief gelaufen</string>
    <string name="fuleinfoadded">Kraftstoffinformationen erfolgreich hinzugefügt</string>
    <string name="plsenterendkilo">Bitte geben Sie den Endkilometer ein</string>
    <string name="dayended">Tag erfolgreich beendet</string>
    <string name="plsenterfulelevel">Bitte geben Sie eine gültige Fule-Stufe ein</string>
    <string name="plsentermessage">Bitte geben Sie eine gültige Nachricht ein</string>
    <string name="messagesend">Mesage erfolgreich senden</string>
    <string name="do_you_really_want_to_signout">Möchten Sie sich wirklich abmelden?</string>
    <string name="cancel">Stornieren</string>
    <string name="sure">Sicher</string>
    <string name="surewanttotime">Möchten Sie den Timer wirklich stoppen?</string>
    <string name="select_station">Wählen Sie Station</string>
    <string name="enter_start_kilometer">Startkilometer eingeben</string>
    <string name="enter_start_kennzeichen">Mark eingeben</string>
    <string name="Alert">Aufmerksam</string>
    <string name="timestoped">Timer erfolgreich gestoppt</string>
    <string name="pressbackagain_exit">Drücken Sie zum Beenden erneut auf Zurück</string>
    <string name="entervalid_email">Geben Sie eine gültige E-Mail-Adresse ein</string>
    <string name="entervalid_password">Geben Sie ein gültiges Passwort ein</string>
    <string name="entervalid_euro">Geben Sie einen gültigen Euro ein</string>
    <string name="entervalid_disel">Geben Sie Valid Diesel ein</string>
    <string name="entervalid_zipcode">Geben Sie eine gültige Postleitzahl ein</string>
    <string name="entervalid_kilometer">Geben Sie einen gültigen Kilometer ein</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="daystarted_successfully">Der Tag begann erfolgreich</string>
    <string name="problemmelden">Problem / Reklamation:</string>
    <string name="die_nachricht_geht_direkt_an_den_chef_falls_ihr_ein_problem_mit_einem_mitarbeiter_dispatcher_oder_fuhrparkmanager_habt_schreibt_es_bitte_unten_rein">Die Nachricht geht direkt an den Chef. Falls Ihr ein Problem mit einem Mitarbeiter, Dispatcher oder Fuhrparkmanager habt schreibt es bitte unten rein.</string>


    <string-array name="array_countries">
        <item>Australia</item>
        <item>Canada</item>
        <item>France</item>
        <item>Japan</item>
        <item>Rusia</item>
        <item>USA</item>


    </string-array>


</resources>